<package format="2">
  <name>mars_rover_2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for RoverAssemblyForURDF.SLDASM</p>
    <p>This package contains configuration data, 3D models and launch files
for mars_rover_2 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <architecture_independent />
    <gazebo_ros gazebo_model_path="${prefix}/meshes/"/>
  </export>
</package>